--- a/courses.html
+++ b/courses.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device_width, initial-scale.0">
         <meta charset="UTF-8">
         <title>Andrei - Projects</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/courses.css">
+        <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="CSS/courses.css">
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Comfortaa:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Chelsea+Market&family=Comfortaa:wght@600&display=swap" rel="stylesheet">
