updated courses+employment tab

--- a/courses.html
+++ b/courses.html
@@ -26,6 +26,7 @@
                 <ul>
                     <li class="course">CIS 300 - Data and Program Structures</li>
                     <li class="course">CIS 301 - Logical Foundations of Programming</li>
+                    <li class="course">CIS 575 - Introduction to Algorithm Analysis</li>
                 </ul>
             </div>
             <div class="course-sect">
@@ -34,6 +35,7 @@
                     <li class="course">MATH 350 - Mathematical Scholars Calculus 3</li>
                     <li class="course">MATH 351 - Mathematical Scholars Calculus 4</li>
                     <li class="course">MATH 510 - Discrete Mathematics</li>
+                    <li class="course">MATH 723 - Complex Functions</li>
                 </ul>
             </div>
         </div>
