--- a/employment.html
+++ b/employment.html
@@ -23,6 +23,8 @@
             <div class="jobs">
                 <h2>K-State Mathematics Grader <span class="date">(August 2023 - Present)</span></h2>
                 <p>At K-State, I'm responsible for grading and evaluating student math homeworks. It's very interesting to see the many approaches that can be taken for the same problems.</p>
+                <h2>Position at Kstate AI Research Lab <span class="date">(January 2024 - Present)</span></h2>
+                <p>Just started not enough time for a description.</p>
             </div>
         </div>
     </body>
